--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ android.nonTransitiveRClass=true
 android.nonFinalResIds=true
 
 # Maven release configuration
-GROUP=com.lambdapioneer.argon2kt
+GROUP=com.github.tougee
 POM_ARTIFACT_ID=argon2kt
-VERSION_NAME=1.6.0
+VERSION_NAME=0.0.2
 
 POM_NAME=Argon2kt
 POM_DESCRIPTION=An Android/Kotlin binding for the Argon2 hash
